# roguelike

./: .gitignore  .gitmodules  CMakeLists.txt  Player.h  README.md  Scene.h  main.cpp  roguelike.docx  scene.txt
application/: CMakeLists.txt  application.cpp  application.hpp
datasets/models/box/: box.mtl
datasets/shaders/default/: frag.glsl  vert.glsl
model/: CMakeLists.txt  model.cpp  model.h  model.hpp  model_data.cpp  topology.cpp
scene/: CMakeLists.txt  player.cpp  player.h  scene.cpp  scene.h
scene/inventory/: inventory.cpp  inventory.h
scene/things/: thing.cpp  thing.h
scene/units/: base_unit.hpp  field.hpp  game_objs.cpp  game_objs.hpp
